--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                 <button onclick="screen.value=eval(screen.value)">+</button>
             </div>
         </div>
+
+        <div><h1>The Grand Calcutron</h1></div>
     </div>
 </body>
 <!-- <script>
